Fixed Stacked Animation

--- a/index.html
+++ b/index.html
@@ -163,6 +163,24 @@
 					</div>
 				</div>
 			</section>
+			<section class="section__works">
+				<h1 class="heading-hero">Works</h1>
+
+				<div>
+					<img
+						class="hero__pattern hero__pattern-3"
+						src="img/5.png"
+						alt="Pattern Image"
+					/>
+				</div>
+				<div>
+					<img
+						class="hero__pattern hero__pattern-3"
+						src="img/6.png"
+						alt="Pattern Image"
+					/>
+				</div>
+			</section>
 		</main>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
