--- a/index.html
+++ b/index.html
@@ -164,21 +164,55 @@
 				</div>
 			</section>
 			<section class="section__works">
-				<h1 class="heading-hero">Works</h1>
-
-				<div>
-					<img
-						class="hero__pattern hero__pattern-3"
-						src="img/5.png"
-						alt="Pattern Image"
-					/>
+				<div class="work-title-wrapper">
+					<h1 class="heading-work">WORKS</h1>
 				</div>
-				<div>
-					<img
-						class="hero__pattern hero__pattern-3"
-						src="img/6.png"
-						alt="Pattern Image"
-					/>
+
+				<div class="works-grid">
+					<!-- Work 1 -->
+					<div class="work work1 card">
+						<div class="card-image">
+							<img src="img/projects/Natours.png" alt="Work 1" />
+						</div>
+						<div class="card-footer">
+							<h3>Natours</h3>
+							<a target="_blank" href="https://natours-eshan.netlify.app/">
+								<span>Discover</span>
+								<img src="/img/arrow.png" alt="" />
+							</a>
+						</div>
+					</div>
+
+					<!-- Work 2 -->
+					<div class="work work2 card">
+						<div class="card-image">
+							<img src="img/projects/Upward.png" alt="Work 2" />
+						</div>
+						<div class="card-footer">
+							<h3>Upward</h3>
+							<a target="_blank" href="https://upward-bangladesh.vercel.app/">
+								<span>Discover</span>
+								<img src="/img/arrow.png" alt="" />
+							</a>
+						</div>
+					</div>
+
+					<!-- Work 3 -->
+					<div class="work work3 card">
+						<div class="card-image">
+							<img src="img/projects/Wild-oasis.png" alt="Work 3" />
+						</div>
+						<div class="card-footer">
+							<h3>Wild Oasis</h3>
+							<a
+								target="_blank"
+								href="https://the-wild-oasis-website-pied.vercel.app/"
+							>
+								<span>Discover</span>
+								<img src="/img/arrow.png" alt="" />
+							</a>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
