--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
 		<link
@@ -44,30 +44,33 @@
 			<section class="section__hero">
 				<div class="hero">
 					<div class="hero__textbox-1">
-						<div>
-							<img
-								class="hero__pattern hero__pattern-1"
-								src="img/2.png"
-								alt="Square pattern"
-							/>
-						</div>
 						<h1 class="heading-hero">
-							<span class="heading-hero__1">Development</span>
-							<span class="heading-hero__2">Agency</span>
+							Websites That Turn <br />
+							Visitors Into Customers
 						</h1>
-						<div>
-							<img
-								class="hero__pattern hero__pattern-2"
-								src="img/2.png"
-								alt="Square pattern"
-							/>
-						</div>
 					</div>
 					<div class="hero__textbox-2">
 						<h5 class="heading-secondary">
-							YOUR BUSINESS DESERVES MORE THAN JUST A WEBSITE—IT DESERVES A
-							GROWTH ENGINE. LET'S BUILD IT TOGETHER.
+							We build fast, conversion first sites for businesses. Simple,
+							reliable and measurable
 						</h5>
+						<div>
+							<a class="btn__cta btn__primary" href="contact.html"
+								>Get a free audit</a
+							>
+						</div>
+					</div>
+					<div class="hero__pattern__container">
+						<img
+							class="hero__pattern hero__pattern-1"
+							src="img/2.png"
+							alt="Square pattern"
+						/>
+						<img
+							class="hero__pattern hero__pattern-2"
+							src="img/2.png"
+							alt="Square pattern"
+						/>
 					</div>
 				</div>
 			</section>
@@ -212,6 +215,83 @@
 								<img src="/img/arrow.png" alt="" />
 							</a>
 						</div>
+					</div>
+					<!-- Work 4 -->
+					<div class="work work4 card">
+						<div class="card-image">
+							<img src="img/projects/Greenmind.png" alt="Work 4" />
+						</div>
+						<div class="card-footer">
+							<h3>Greenmind</h3>
+							<a target="_blank" href="https://buy-plants-jet.vercel.app/">
+								<span>Discover</span>
+								<img src="/img/arrow.png" alt="" />
+							</a>
+						</div>
+					</div>
+					<!-- Work 5 -->
+					<div class="work work5 card">
+						<div class="card-image">
+							<img src="img/projects/Ecom.png" alt="Work 5" />
+						</div>
+						<div class="card-footer">
+							<h3>Ecom Cloths</h3>
+							<a
+								target="_blank"
+								href="https://ecommerce-clothing-sable.vercel.app/"
+							>
+								<span>Discover</span>
+								<img src="/img/arrow.png" alt="" />
+							</a>
+						</div>
+					</div>
+					<!-- Work 6 -->
+					<div class="work work6 card">
+						<div class="card-image">
+							<img src="img/projects/Todo.png" alt="Work 6" />
+						</div>
+						<div class="card-footer">
+							<h3>Todo Magic</h3>
+							<a
+								target="_blank"
+								href="https://to-do-list-app-olive-ten.vercel.app/"
+							>
+								<span>Discover</span>
+								<img src="/img/arrow.png" alt="" />
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section__team">
+				<h1 class="heading-team">Meet the Team!</h1>
+				<div class="flex-container">
+					<div class="team__wrapper">
+						<div class="team team__1">
+							<h1 class="team__name">Ashfaque Amin</h1>
+							<h2 class="team__designation">Co-Founder and Web Developer</h2>
+						</div>
+						<div class="team team__2">
+							<h1 class="team__name">Muhammad Ajlan Mahee</h1>
+							<h2 class="team__designation">
+								Co-Founder, UI designer and Social Media Expert
+							</h2>
+						</div>
+						<div class="team team__3">
+							<h1 class="team__name">Emtiaz Ahmed Siam</h1>
+							<h2 class="team__designation">Co-Founder and Web Developer</h2>
+						</div>
+					</div>
+					<div class="team__image">
+						<img
+							src="./img/team/eshan.JPG"
+							alt="Ashfaque Amin"
+							id="img1"
+							class="active"
+						/>
+						<img src="./img/team/ajlan.jpg" alt="Ajlan Mahee" id="img2" />
+						<img src="./img/team/siam.jpg" alt="Emtiaz Ahmed" id="img3" />
 					</div>
 				</div>
 			</section>
