Desktop only done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						</h1>
 					</div>
 					<div class="hero__textbox-2">
-						<h5 class="heading-secondary">
+						<h5 class="heading-secondary text-anim">
 							We build fast, conversion first sites for businesses. Simple,
 							reliable and measurable
 						</h5>
@@ -80,7 +80,7 @@
 					<img class="intro__logo" src="img/logo-big.png" alt="Byteform logo" />
 				</div>
 				<div class="intro__text">
-					<p>
+					<p class="intro__description text-anim">
 						Your website is the first impression your business makes online—make
 						it count. At Byteform, we design and develop high-performing,
 						user-focused websites that attract, engage, and convert. Based in
@@ -295,10 +295,138 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="section__testimonials">
+				<img
+					class="hero__pattern testimonials__pattern hero__pattern-1"
+					src="./img/4.png"
+					alt="Wave Pattern"
+				/>
+				<div class="testimonials-text__container">
+					<div class="testimonials__main">
+						<img src="./img/7.png" alt="Circle Pattern" />
+						<h1 class="text-anim">Let's Build your growth engine together</h1>
+					</div>
+					<div class="testimonials__intro">
+						<p class="text-anim">
+							Businesses and professionals have trusted us. Thanks to our
+							tailored approach, they have been able to benefit from unique
+							solutions, designed for their needs.
+						</p>
+					</div>
+				</div>
+				<div class="testimonials__container">
+					<div class="testimonials__track">
+						<!-- Card 1 -->
+						<div class="testimonial__card">
+							<p class="quote">
+								“Working with this team was smooth, professional, and exceeded
+								our expectations.”
+							</p>
+							<h4 class="name">— Aisha Rahman, Product Designer</h4>
+						</div>
+
+						<!-- Card 2 -->
+						<div class="testimonial__card">
+							<p class="quote">
+								“They turned our vision into a delightful product. Great
+								communication throughout.”
+							</p>
+							<h4 class="name">— Karim M., Founder of FinBox</h4>
+						</div>
+
+						<!-- Card 3 -->
+						<div class="testimonial__card">
+							<p class="quote">
+								“Conversion rates improved after their redesign — clean and
+								thoughtful execution.”
+							</p>
+							<h4 class="name">— Sarah B., Marketing Lead</h4>
+						</div>
+
+						<!-- Card 4 -->
+						<div class="testimonial__card">
+							<p class="quote">
+								“The codebase was clean and well-structured, easy to hand over
+								to our devs.”
+							</p>
+							<h4 class="name">— Rafi Akter, CTO of Shoply</h4>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="section__cta">
+				<div class="cta__container">
+					<h1 class="heading-cta text-anim">Have a project in mind?</h1>
+					<p class="cta__text text-anim">Let's talk about it!</p>
+					<a class="btn__cta btn__primary" href="contact.html">Book A Call</a>
+				</div>
+			</section>
 		</main>
+
+		<footer class="footer">
+			<div class="footer__container">
+				<div class="sticky__area">
+					<div class="sticky__area__2 text-anim">
+						<h1 class="footer__title">Byteform</h1>
+						<div class="footer__grid">
+							<!-- Menu -->
+							<div class="footer__col">
+								<h3>Menu</h3>
+								<ul>
+									<li><a href="#">Home</a></li>
+									<li><a href="#work">Works</a></li>
+									<li><a href="#">Studio</a></li>
+									<li><a href="#">About</a></li>
+								</ul>
+							</div>
+
+							<!-- Contact -->
+							<div class="footer__col">
+								<h3>Contact</h3>
+								<ul>
+									<li>ByteForm</li>
+									<li>Dhaka, Bangladesh</li>
+									<li>
+										<a href="mailto:AjuMamaLulli@gmail.com"
+											>AjuMamaLulli@gmail.com</a
+										>
+									</li>
+									<li><a href="tel:017621782182">017621782182</a></li>
+								</ul>
+							</div>
+
+							<!-- Services -->
+							<div class="footer__col">
+								<h3>Services</h3>
+								<ul>
+									<li><a href="#">Web Development</a></li>
+									<li><a href="#">UI/UX Design</a></li>
+									<li><a href="#">SEO</a></li>
+								</ul>
+							</div>
+
+							<!-- Social -->
+							<div class="footer__col">
+								<h3>Social</h3>
+								<ul>
+									<li><a href="#">Facebook</a></li>
+									<li><a href="#">GitHub</a></li>
+									<li><a href="#">X (Twitter)</a></li>
+									<li><a href="#">Instagram</a></li>
+									<li><a href="#">LinkedIn</a></li>
+								</ul>
+							</div>
+						</div>
+						<p class="footer__copy">© 2025 Byteform. All rights reserved.</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
 		<script src="https://unpkg.com/lenis@1.3.10/dist/lenis.min.js"></script>
 		<script type="module" src="js/index.js"></script>
 	</body>
