Made Fully Responsive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 				<img src="img/logo-sm.png" alt="Byteform logo" class="logo" />
 				<p class="nav-logo__name">Byteform</p>
 			</a>
+
+			<div class="hamburger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li><a class="main-nav__link" href="#work">Work</a></li>
@@ -50,7 +57,7 @@
 						</h1>
 					</div>
 					<div class="hero__textbox-2">
-						<h5 class="heading-secondary text-anim">
+						<h5 class="heading-secondary">
 							We build fast, conversion first sites for businesses. Simple,
 							reliable and measurable
 						</h5>
