Responsive bug fixed

--- a/index.html
+++ b/index.html
@@ -396,11 +396,9 @@
 									<li>ByteForm</li>
 									<li>Dhaka, Bangladesh</li>
 									<li>
-										<a href="mailto:AjuMamaLulli@gmail.com"
-											>AjuMamaLulli@gmail.com</a
-										>
+										<a href="mailto:byteform@gmail.com">byteform@gmail.com</a>
 									</li>
-									<li><a href="tel:017621782182">017621782182</a></li>
+									<li><a href="tel:+8801705147566">+8801705147566</a></li>
 								</ul>
 							</div>
 
@@ -419,10 +417,8 @@
 								<h3>Social</h3>
 								<ul>
 									<li><a href="#">Facebook</a></li>
-									<li><a href="#">GitHub</a></li>
 									<li><a href="#">X (Twitter)</a></li>
 									<li><a href="#">Instagram</a></li>
-									<li><a href="#">LinkedIn</a></li>
 								</ul>
 							</div>
 						</div>
