--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="result/css/style.css" />
 		<link rel="icon" type="image/x-icon" href="/img/favicon.png" />
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+		<link rel="manifest" href="manifest.webmanifest" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -14,6 +16,15 @@
 			href="https://unpkg.com/lenis@1.3.10/dist/lenis.css"
 		/>
 		<meta charset="UTF-8" />
+		<meta
+			name="description"
+			content="Byteform is a web design and development studio in Bangladesh. We build fast, conversion-focused websites with modern UI/UX and SEO optimization — helping businesses attract, engage, and convert visitors into customers."
+		/>
+		<meta
+			name="keywords"
+			content="Web Design, Web Development, UI Design, SEO, Bangladesh, Modern Websites, Byteform, Digital Agency, Modern UI, Digital Marketing, Responsive Design"
+		/>
+		<meta name="author" content="ByteForm Inc." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ByteForm Inc.</title>
 	</head>
@@ -24,7 +35,12 @@
 		<!-- Cursor end -->
 		<header class="header">
 			<a class="nav-logo" href="#">
-				<img src="img/logo-sm.png" alt="Byteform logo" class="logo" />
+				<img
+					src="img/logo-sm.png"
+					alt="Byteform logo"
+					loading="eager"
+					class="logo"
+				/>
 				<p class="nav-logo__name">Byteform</p>
 			</a>
 
@@ -71,13 +87,15 @@
 					<div class="hero__pattern__container">
 						<img
 							class="hero__pattern hero__pattern-1"
-							src="img/2.png"
+							src="img/2.webp"
 							alt="Square pattern"
+							loading="lazy"
 						/>
 						<img
 							class="hero__pattern hero__pattern-2"
-							src="img/2.png"
+							src="img/2.webp"
 							alt="Square pattern"
+							loading="lazy"
 						/>
 					</div>
 				</div>
@@ -85,7 +103,12 @@
 
 			<section class="section__intro">
 				<div>
-					<img class="intro__logo" src="img/logo-big.png" alt="Byteform logo" />
+					<img
+						class="intro__logo"
+						src="img/logo-big.png"
+						alt="Byteform logo"
+						loading="eager"
+					/>
 				</div>
 				<div class="intro__text">
 					<p class="intro__description text-anim">
@@ -122,8 +145,9 @@
 							<div class="service__img__container">
 								<img
 									class="service__img"
-									src="img/web-dev.jpg"
+									src="img/web-dev.webp"
 									alt="A picture of Web Development"
+									loading="lazy"
 								/>
 							</div>
 						</div>
@@ -143,8 +167,9 @@
 							<div class="service__img__container">
 								<img
 									class="service__img"
-									src="img/ui-design.jpg"
+									src="img/ui-design.webp"
 									alt="A picture of UI design"
+									loading="lazy"
 								/>
 							</div>
 						</div>
@@ -166,8 +191,9 @@
 							<div class="service__img__container">
 								<img
 									class="service__img"
-									src="img/seo.jpg"
+									src="img/seo.webp"
 									alt="A picture of SEO Analytics"
+									loading="lazy"
 								/>
 							</div>
 						</div>
@@ -175,21 +201,27 @@
 				</div>
 			</section>
 			<section class="section__works">
-				<div class="work-title-wrapper">
-					<h1 class="heading-work">WORKS</h1>
+				<div class="center-div">
+					<div class="work-title-wrapper">
+						<h1 class="heading-work">WORKS</h1>
+					</div>
 				</div>
 
 				<div class="works-grid">
 					<!-- Work 1 -->
 					<div class="work work1 card">
 						<div class="card-image">
-							<img src="img/projects/Natours.png" alt="Work 1" />
+							<img
+								src="img/projects/Natours.webp"
+								alt="A screenshot of Natours' Landing Page"
+								loading="lazy"
+							/>
 						</div>
 						<div class="card-footer">
 							<h3>Natours</h3>
 							<a target="_blank" href="https://natours-eshan.netlify.app/">
 								<span>Discover</span>
-								<img src="/img/arrow.png" alt="" />
+								<img src="/img/arrow.webp" alt="Learn More" loading="lazy" />
 							</a>
 						</div>
 					</div>
@@ -197,13 +229,17 @@
 					<!-- Work 2 -->
 					<div class="work work2 card">
 						<div class="card-image">
-							<img src="img/projects/Upward.png" alt="Work 2" />
+							<img
+								src="img/projects/Upward.webp"
+								alt="A screenshot of Upward's Landing Page"
+								loading="lazy"
+							/>
 						</div>
 						<div class="card-footer">
 							<h3>Upward</h3>
 							<a target="_blank" href="https://upward-bangladesh.vercel.app/">
 								<span>Discover</span>
-								<img src="/img/arrow.png" alt="" />
+								<img src="/img/arrow.webp" alt="Learn More" loading="lazy" />
 							</a>
 						</div>
 					</div>
@@ -211,7 +247,11 @@
 					<!-- Work 3 -->
 					<div class="work work3 card">
 						<div class="card-image">
-							<img src="img/projects/Wild-oasis.png" alt="Work 3" />
+							<img
+								src="img/projects/Wild-oasis.webp"
+								alt="A screenshot of Wild Oasis' Landing Page"
+								loading="lazy"
+							/>
 						</div>
 						<div class="card-footer">
 							<h3>Wild Oasis</h3>
@@ -220,27 +260,35 @@
 								href="https://the-wild-oasis-website-pied.vercel.app/"
 							>
 								<span>Discover</span>
-								<img src="/img/arrow.png" alt="" />
+								<img src="/img/arrow.webp" alt="Learn More" loading="lazy" />
 							</a>
 						</div>
 					</div>
 					<!-- Work 4 -->
 					<div class="work work4 card">
 						<div class="card-image">
-							<img src="img/projects/Greenmind.png" alt="Work 4" />
+							<img
+								src="img/projects/Greenmind.webp"
+								alt="A screenshot of Greenmind's Landing Page"
+								loading="lazy"
+							/>
 						</div>
 						<div class="card-footer">
 							<h3>Greenmind</h3>
 							<a target="_blank" href="https://buy-plants-jet.vercel.app/">
 								<span>Discover</span>
-								<img src="/img/arrow.png" alt="" />
+								<img src="/img/arrow.webp" alt="Learn More" loading="lazy" />
 							</a>
 						</div>
 					</div>
 					<!-- Work 5 -->
 					<div class="work work5 card">
 						<div class="card-image">
-							<img src="img/projects/Ecom.png" alt="Work 5" />
+							<img
+								src="img/projects/Ecom.webp"
+								alt="A screenshot of Ecom Cloths' Landing Page"
+								loading="lazy"
+							/>
 						</div>
 						<div class="card-footer">
 							<h3>Ecom Cloths</h3>
@@ -249,14 +297,18 @@
 								href="https://ecommerce-clothing-sable.vercel.app/"
 							>
 								<span>Discover</span>
-								<img src="/img/arrow.png" alt="" />
+								<img src="/img/arrow.webp" alt="Learn More" loading="lazy" />
 							</a>
 						</div>
 					</div>
 					<!-- Work 6 -->
 					<div class="work work6 card">
 						<div class="card-image">
-							<img src="img/projects/Todo.png" alt="Work 6" />
+							<img
+								src="img/projects/Todo.webp"
+								alt="A screenshot of Todo Magic's Landing Page"
+								loading="lazy"
+							/>
 						</div>
 						<div class="card-footer">
 							<h3>Todo Magic</h3>
@@ -265,7 +317,7 @@
 								href="https://to-do-list-app-olive-ten.vercel.app/"
 							>
 								<span>Discover</span>
-								<img src="/img/arrow.png" alt="" />
+								<img src="/img/arrow.webp" alt="Learn More" loading="lazy" />
 							</a>
 						</div>
 					</div>
@@ -293,13 +345,24 @@
 					</div>
 					<div class="team__image">
 						<img
-							src="./img/team/eshan.JPG"
+							src="./img/team/eshan.webp"
 							alt="Ashfaque Amin"
 							id="img1"
 							class="active"
+							loading="lazy"
 						/>
-						<img src="./img/team/ajlan.jpg" alt="Ajlan Mahee" id="img2" />
-						<img src="./img/team/siam.jpg" alt="Emtiaz Ahmed" id="img3" />
+						<img
+							src="./img/team/ajlan.webp"
+							alt="Ajlan Mahee"
+							id="img2"
+							loading="lazy"
+						/>
+						<img
+							src="./img/team/siam.webp"
+							alt="Emtiaz Ahmed"
+							id="img3"
+							loading="lazy"
+						/>
 					</div>
 				</div>
 			</section>
@@ -307,12 +370,13 @@
 			<section class="section__testimonials">
 				<img
 					class="hero__pattern testimonials__pattern hero__pattern-1"
-					src="./img/4.png"
+					src="./img/4.webp"
 					alt="Wave Pattern"
+					loading="lazy"
 				/>
 				<div class="testimonials-text__container">
 					<div class="testimonials__main">
-						<img src="./img/7.png" alt="Circle Pattern" />
+						<img src="./img/7.webp" alt="Circle Pattern" loading="lazy" />
 						<h1 class="text-anim">Let's Build your growth engine together</h1>
 					</div>
 					<div class="testimonials__intro">
